syntax = "proto3";

option csharp_namespace = "UserProfileApi.Protos";

package users;

service UserProfile {
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string bio = 4;
}